--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "commander"                 : "1.1.1",
         "express"                   : "4.10.2",
         "ffi"                       : "1.2.7",
-        "jsdom"                     : "3.1.2",
+        "jsdom"                     : "3.1.2"
     },
     "devDependencies": {
 	"tap" : "",
@@ -15,5 +15,5 @@
     "scripts": {
 	"test": "tap test/unit" 
     },
-    "description" : "Nello World",
+    "description" : "Nello World"
 }
